@@ -28,7 +28,7 @@
 
     <groupId>org.apache.hop</groupId>
     <artifactId>hop</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Hop Orchestration Platform</name>
@@ -102,10 +102,10 @@
 
     <properties>
         <site-repo-url>scpexe://people.apache.org/www/hop.apache.org/maven/</site-repo-url>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <maven.build.timestamp.format>yyyy-MM-dd hh.mm.ss</maven.build.timestamp.format>
-        <maven-surefire-plugin.argLine>-Duser.timezone=UTC -Dfile.encoding=UTF-8 -Duser.language=en -Duser.country=US
+        <maven-surefire-plugin.argLine>-Duser.timezone=UTC -Dfile.encoding=UTF-8 -Duser.language=en -Duser.country=US --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
         </maven-surefire-plugin.argLine>
 
         <!-- License Configuration -->
@@ -114,12 +114,10 @@
 
         <!-- Third-party dependencies -->
         <jetty.version>9.4.35.v20201120</jetty.version>
-        <org.eclipse.platform.version>3.116.100</org.eclipse.platform.version>
+        <org.eclipse.platform.version>3.119.0</org.eclipse.platform.version>
         <org.eclipse.commands.version>3.9.600</org.eclipse.commands.version>
         <org.eclipse.equinox.version>3.10.600</org.eclipse.equinox.version>
         <rhino.version>1.7.12</rhino.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <httpccore.version>4.4.13</httpccore.version>
         <commons-codec.version>1.10</commons-codec.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
@@ -131,16 +129,18 @@
         <httpccore.version>4.4.13</httpccore.version>
 
         <!-- Test dependencies -->
-        <mockito-all.version>1.10.19</mockito-all.version>
-        <powermock-module-junit4.version>1.7.3</powermock-module-junit4.version>
-        <powermock-api-mockito.version>1.7.3</powermock-api-mockito.version>
+        <mockito-core.version>3.12.4</mockito-core.version>
+        <byte-buddy.version>1.11.13</byte-buddy.version>
+        <objenesis.version>3.2</objenesis.version>
+        <powermock-module-junit4.version>2.0.9</powermock-module-junit4.version>
+        <powermock-api-mockito.version>2.0.9</powermock-api-mockito.version>
         <java-hamcrest.version>2.0.0.0</java-hamcrest.version>
         <junit.version>4.13.1</junit.version>
 
         <!-- Copy from master POM (NEEDS CLEANUP) -->
         <!-- VERSIONS -->
         <batik.version>1.14</batik.version>
-        <jacoco-maven-plugin.version>0.8.1</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
         <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
@@ -157,8 +157,8 @@
         <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
         <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
-        <maven-surefire-report-plugin.version>3.0.0-M4</maven-surefire-report-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+        <maven-surefire-report-plugin.version>3.0.0-M5</maven-surefire-report-plugin.version>
         <maven-verifier-plugin.version>1.1</maven-verifier-plugin.version>
         <sonar-maven-plugin.version>3.5.0.1254</sonar-maven-plugin.version>
         <maven-bundle-plugin.version>2.5.3</maven-bundle-plugin.version>
@@ -166,10 +166,8 @@
         <jandex-maven-plugin.version>1.0.8</jandex-maven-plugin.version>
         <wagon-plugin.version>2.0.0</wagon-plugin.version>
 
-        <codehaus-jackson.version>1.9.13</codehaus-jackson.version>
-        <jackson.version>2.13.0</jackson.version>
-        <dom4j.version>2.1.3</dom4j.version>
-        <jaxen.version>1.1.6</jaxen.version>
+        <jackson.version>2.13.2</jackson.version>
+        <jackson.databind.version>2.13.2.1</jackson.databind.version>
         <commons-compress.version>1.21</commons-compress.version>
         <commons-fileupload.version>1.4</commons-fileupload.version>
         <aws-java-sdk.version>1.11.974</aws-java-sdk.version>
@@ -178,11 +176,10 @@
         <spring-security.version>4.1.5.RELEASE</spring-security.version>
 
         <xerces.version>2.12.2</xerces.version>
-        <xml-apis.version>1.4.01</xml-apis.version>
 
         <!-- jdk version -->
-        <source.jdk.version>1.8</source.jdk.version>
-        <target.jdk.version>1.8</target.jdk.version>
+        <source.jdk.version>11</source.jdk.version>
+        <target.jdk.version>11</target.jdk.version>
         <maven.compiler.source>${source.jdk.version}</maven.compiler.source>
         <maven.compiler.target>${target.jdk.version}</maven.compiler.target>
         <compilerArgument/>
@@ -300,8 +297,44 @@
             <!-- Test dependencies -->
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>${mockito-all.version}</version>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito-core.version}</version>
+                <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>*</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${byte-buddy.version}</version>
+                <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>*</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy-agent</artifactId>
+                <version>${byte-buddy.version}</version>
+                <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>*</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.objenesis</groupId>
+                <artifactId>objenesis</artifactId>
+                <version>${objenesis.version}</version>
                 <scope>test</scope>
                 <exclusions>
                     <exclusion>
@@ -330,7 +363,7 @@
             </dependency>
             <dependency>
                 <groupId>org.powermock</groupId>
-                <artifactId>powermock-api-mockito</artifactId>
+                <artifactId>powermock-api-mockito2</artifactId>
                 <version>${powermock-api-mockito.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -347,7 +380,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson.databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.jaxrs</groupId>
@@ -383,17 +416,6 @@
                 <groupId>com.fasterxml.jackson.jr</groupId>
                 <artifactId>jackson-jr-objects</artifactId>
                 <version>${jackson.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.dom4j</groupId>
-                <artifactId>dom4j</artifactId>
-                <version>${dom4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>jaxen</groupId>
-                <artifactId>jaxen</artifactId>
-                <version>${jaxen.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-fileupload</groupId>
@@ -434,12 +456,13 @@
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
                 <version>${xerces.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>xml-apis</groupId>
-                <artifactId>xml-apis</artifactId>
-                <version>${xml-apis.version}</version>
-            </dependency>
+                <exclusions>
+                  <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                  </exclusion>
+              </exclusions>
+            </dependency>            
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-compress</artifactId>
@@ -666,7 +689,7 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <argLine>@{argLine} -Dfile.encoding=${project.build.sourceEncoding}
+                            <argLine>@{argLine} --illegal-access=permit -Dfile.encoding=${project.build.sourceEncoding}
                                 ${maven-surefire-plugin.argLine}
                             </argLine> <!-- this is set by jacoco's prepare-agent execution -->
                             <forkCount>${maven-surefire-plugin.forkCount}</forkCount>
@@ -756,6 +779,9 @@
                         <!-- External Integration Test Exclusion -->
                         <exclude>**/integration-tests/**/*.txt</exclude>
                         <exclude>**/integration-tests/**/*.csv</exclude>
+                        <exclude>**/integration-tests/**/*.avro</exclude>
+                        <exclude>**/integration-tests/**/*.xls</exclude>
+                        <exclude>**/integration-tests/**/*.xlsx</exclude>
                         <exclude>**/integration-tests/**/*.json</exclude>
                         <exclude>**/integration-tests/**/*.json.old</exclude>
 
